--- a/index.html
+++ b/index.html
@@ -1,1 +1,93 @@
-<p>Divya</p>
+<!DOCTYPE html>
+<html>
+    <head>
+        <title>St. Louis Attractions</title>
+    </head>
+    <body>
+        <header>
+            <h1>St. Louis Attractions</h1>
+            <h2>Top best attractions!</h2>
+            <nav>
+                <ul>
+                    <li><a href="#Arch">The Gateway Arch</a></li>
+                    <li><a href="#Zoo">St. Louis Zoo</a></li>
+                    <li><a href="#Anheuser">Anheuser-Busch Brewery</a></li>
+                    <li><a href="#TedDrewes">Ted Drews Frozen Custard</a></li>
+                    <li><a href="#ForestPark">Forest Park</a></li>
+                </ul>
+            </nav>
+        </header>
+        <main>
+            <article>
+                <section> 
+                    <a name="Arch"></a>                   
+                    <h3>The Gateway Arch</h3>
+                    <p>The Gateway Arch is a 630-foot (192 m) monument in St. Louis in the U.S. state of Missouri. 
+                    Clad in stainless steel and built in the form of a weighted catenary arch,[5] it is the world's tallest arch,[4] the tallest man-made monument in the Western Hemisphere,[6] and Missouri's tallest accessible building. 
+                    Built as a monument to the westward expansion of the United States,[5] and officially dedicated to "the American people," it is the centerpiece of the Gateway Arch National Park and has become an internationally recognized symbol of St. Louis, as well as a popular tourist destination.</p>
+                    <figure>
+                        <img src="C:\Users\DIVYA PC\lc101\html-me-something\image\St. Louis Arch.jpg" alt="St. Louis Arch" />
+                        <figcaption>Night view of Gateway Arch</figcaption>
+                    </figure>
+                </section>
+                <section>
+                    <a name="Zoo"></a>
+                    <h3>St. Louis Zoo</h3>
+                    <p>Lions, tigers and bears, oh my! The Saint Louis Zoo does house these three types of mammals, but it also boards armadillos, sloths, swans, penguins, turtles, gators and tarantulas, along with many other kinds of creatures. 
+                    And over at the Caribbean Cove, you can run your hands over an assortment of stingrays (clipped of their stingers).
+                    But the wide assortment of animals isn't the only reason why visitors praise this St. Louis attraction. 
+                    Many recent travelers raved about the free admission, as well as the large, natural enclosures created for the animals. 
+                    In fact, the zoo is so large that you may want to set aside more than one day exploring this expansive property.</p>
+                    <figure>
+                        <img src="C:\Users\DIVYA PC\lc101\html-me-something\image\IMG_3990.jpg" alt="St. Louis Zoo" />
+                        <figcaption>St. Louis entrance view</figcaption>
+                    </figure>
+                </section>
+                <section>
+                    <a name="Anheuser"></a>
+                    <h3>Anheuser-Busch Brewery</h3>
+                    <p>Besides tasting the ubiquitous Budweiser in the Hospitality Room, the main attraction at the Anheuser-Busch Brewery is the famous, feather-footed Clydesdale horses. 
+                    But the Anheuser-Busch Brewery isn't just about horses. (It is a brewery, after all.) At this beer emporium, visitors rave about the two complimentary drinks offered 
+                    to each tourgoer (21 years and older, of course), as well as the wealth of beer knowledge shared by the tour guides.</p>
+                    <figure>
+                        <img src="C:\Users\DIVYA PC\lc101\html-me-something\image\Anheuser.jpg" alt="Anheuser Brewery" />
+                        <figcaption>Anheuser building</figcaption>
+                    </figure>
+                </section>
+                <section>
+                    <a name="TedDrewes"></a>
+                    <h3>Ted Drews Frozen Custard</h3>
+                    <p>Ted Drewes has been selling frozen custard for over 80 years. 
+                    His attention to quality has set the standard for frozen custard in St. Louis.
+                    It all started with Ted Drewes Sr., he opened his first frozen custard store in Florida in 1929. In 1930, he opened another store on Natural Bridge Road in St. Louis and the South Grand store in 1931. 
+                    In 1941, the family opened a second South Side stand which is the current Chippewa location on historic Route 66. 
+                    By 1958, the two South Side stands were all that remained. 
+                    It has become a popular treat for St. Louisans and tourists to enjoy after visiting the Arch, the St. Louis Zoo, or a Cardinal’s baseball game. 
+                    Along with the delicious hot fudge sundae, Ted’s “concrete” has been the most popular treat at the custard stands. 
+                    The concrete, which was created in 1959, is a malt or shake so thick that it is served upside down. 
+                    Ted is very proud of his family business and is known in St. Louis to say, “It really is good, guys… and gals!</p>
+                    <figure>
+                        <img src="C:\Users\DIVYA PC\lc101\html-me-something\image\Ted-Drewes.jpg" alt="Ted Drews Frozen Custard" />
+                        <figcaption>At Ted Drewes</figcaption>
+                    </figure>
+                </section>
+                <section>
+                    <a name="ForestPark"></a>
+                    <h3>Forest Park</h3>
+                    <p>Forest Park is huge. If you want to get an idea of how large, consider this: It's about 500 acres larger than New York City's sprawling Central Park. 
+                    As such, this "forest" holds nearly 1,300 acres worth of things to do. You'll find everything from a zoo to summer concerts to museums to a golf course here. 
+                    You can also jog its trails, boat its waterways and swing your racket on its tennis courts, among other activities. And if you're looking for a bit of St. Louis history, you're in luck: There's plenty of that here, too. 
+                    Forest Park has not only been open since 1876, but has played host to the 1904 World's Fair as well. (In fact, proceeds earned from the 1904 World's Fair were used to construct the park's World's Fair Pavilion in 1909, which is free to visit.)
+                    Additionally, the park also houses the Cabanne House — the first brick farmhouse built west of the Mississippi.</p>
+                    <figure>
+                        <img src="C:\Users\DIVYA PC\lc101\html-me-something\image\Forest_park.jpg" alt="Forest park" />
+                        <figcaption>View of sunset at Forest Park</figcaption>
+                    </figure>
+                </section>
+            </article>
+        </main>
+        <footer>
+                <p>&copy; 2018 Divya Dodda</p>
+        </footer>
+    </body>
+</html>
